--- a/src/ProfilePage.css
+++ b/src/ProfilePage.css
@@ -2,8 +2,13 @@
 .profile-page {
     font-family: Arial, sans-serif;  /* Set the font for the profile page */
     padding: 20px;  /* Add padding around the content */
-    background-color: #f4f4f4;  /* Set a light gray background color */
+    background-color: rgba(244, 244, 244, 0.7); /* Set opacity */
+    background-image: url('../Images/Profile.jpg'); /* Set your image path */
+    background-size: cover; /* Cover the entire container */
+    background-position: center; /* Center the image */
+    background-blend-mode: overlay; /* Blend the image with the background color */
     min-height: 100vh;  /* Ensure the profile page takes up the full viewport height */
+    
 }
 
 /* Styling for the container that holds the profile picture */
