--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -41,7 +41,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(142, 140, 140, 0.9); /* Lighter shade of gray */
+    background-color: rgb(142, 140, 140, 0.9) !important; /* Lighter shade of gray */
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
@@ -53,14 +53,25 @@ header {
 /* Styling for the site title */
 h1 {
     margin: 0;
-    font-size: 32px; /* Increased font size */
+    font-size: 100px; /* Increased font size */
     font-weight: 1000; /* Bold weight */
     letter-spacing: 1.5px; /* Added letter spacing for a more designer look */
     font-family: 'Playfair Display', serif; /* A more designer-like font */
     text-shadow: 2px 2px 4px rgba(126, 123, 123, 0.1); /* Slight text shadow for depth */
-    color: #fff;
+    color: #fff !important;
+
+    background: -webkit-linear-gradient(#868686, #fff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  
 }
 
+/* Styling for Site logo */
+.home-page img {
+    width: 300px;
+    height: 300px;
+    opacity: 0.8;
+}
 
 /* Styling for the login button */
 .login-btn {
@@ -155,4 +166,5 @@ h1 {
 .popular-recipes li:last-child, .new-recipes li:last-child {
     border-bottom: none;
 }
+
 
